fixing broken css, adding one more grid system

--- a/static/css/info.css
+++ b/static/css/info.css
@@ -1,12 +1,15 @@
 .grid-card {
   height: 77.5vh;
-  /* background-color: lightgray; */
 }
 
- .row {
+.grid-card .grid-card-image img {
+  width: 100%;
+  height: auto;
+}
+
+.row {
   grid-template-columns: repeat(3, 1fr);
 }
-
 
 .site-map-button {
   text-align: center;
@@ -16,36 +19,28 @@
   text-align: right;
 }
 
-
 @media only screen and (max-width: 1300px) {
-
-  .default-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
   .empty-cell {
     display: none;
   }
 }
 
-
 @media only screen and (max-width: 850px) {
-
-  .index-button, .empty-cell  {
+  .index-button, .empty-cell {
     display: none;
   }
 
-.row {
-  grid-template-columns: repeat(2, 1fr);
-}
+  .row {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
-.site-map-button {
-  text-align: left;
-}
+  .site-map-button {
+    text-align: left;
+  }
 
-.mail-button {
-  text-align: right;
-}
+  .mail-button {
+    text-align: right;
+  }
 
   .footer-text, .mail-button, .index-button {
     text-align: center;
