--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,8 +4,8 @@
 
 :root {
   --gallery-card-height: 20vw;
-  --grid-card-height: 20vh;
-  --grid-row-gap: 7.5vh;
+  --grid-card-height: 35vw;
+  --grid-row-gap: 10vw;
   --grid-column-gap: 1vw;
 }
 
@@ -45,14 +45,13 @@ body {
 
 header, footer {
   width: 100%;
-  height: max(12.5vh, 100px);
   display: flex;
 
   font-size: max(2rem, 12px);
 }
 
 .container {
-  padding: 2rem 3.5rem 0 3.5rem;
+  padding: 2rem 3.5rem 2rem 3.5rem;
   width: max(100vw,375px);
 }
 
@@ -94,6 +93,10 @@ small {
   font-style: italic;
 }
 
+img {
+  transform-origin: 0% 0%;
+}
+
 .dwg {
   image-rendering: crisp-edges;
   image-rendering: -moz-crisp-edges;          /* Firefox */
@@ -119,7 +122,6 @@ small {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
 
-  grid-auto-rows: auto;
   grid-row-gap: var(--grid-row-gap);
   grid-column-gap: var(--grid-column-gap);
   grid-auto-flow: dense;
@@ -128,9 +130,19 @@ small {
 .default-grid {
 
   display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  grid-row-gap: var(--grid-row-gap);
+  grid-column-gap: var(--grid-column-gap);
+  grid-auto-flow: dense;
+
+}
+
+.info-grid {
+
+  display: grid;
   grid-template-columns: repeat(4, 1fr);
 
-  grid-auto-rows: auto;
   grid-row-gap: var(--grid-row-gap);
   grid-column-gap: var(--grid-column-gap);
   grid-auto-flow: dense;
@@ -145,19 +157,26 @@ small {
   overflow: hidden;
 
   height: var(--grid-card-height);
+  /* card height essentially controlling row heigh */
 
   position: relative;
 
-  border: 1px solid red;
-  /* card height essentially controlling row heigh */
+
 }
 
 .grid-card .grid-card-image {
+  position: relative;
+  object-fit: contain;
 }
 
 .grid-card .grid-card-image img {
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: var(--grid-card-height);
+}
+
+.gallery-canvas .grid-card .grid-card-image img {
+  width: auto;
+  height: var(--gallery-card-height);
 }
 
 /* grid setup */
@@ -201,14 +220,13 @@ small {
 @media only screen and (max-width: 1300px) {
   .gallery-canvas {
     grid-template-columns: repeat(4, 1fr);
-
-  }
-
-  .gallery-canvas .grid-card {
-    height: 33vw;
   }
 
   .default-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .info-grid {
     grid-template-columns: repeat(2, 1fr);
   }
 
@@ -228,6 +246,10 @@ small {
     grid-column: span 2;
   }
 
+  .grid-card .grid-card-image img {
+    height: 33vw;
+  }
+
 }
 
 @media only screen and (max-width: 850px) {
@@ -240,7 +262,7 @@ small {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .default-grid, .gallery-canvas{
+  .info-grid, .default-grid, .gallery-canvas{
     grid-template-columns: repeat(1, 1fr);
   }
 
@@ -256,7 +278,33 @@ small {
     height: max(65vh, 120vw);
   }
 
+  .default-grid .grid-card {
+    /* height: max(100vh, 33vw); */
+    height: 100%;
+  }
+
+  .info-grid .grid-card {
+    /* height: max(100vh, 33vw); */
+    height: 100%;
+  }
+
+  .grid-card .grid-card-image {
+
+    top: 0% !important;
+    right: 0% !important;
+    bottom: 0% !important;
+    left: 0% !important;
+  }
+
+  .grid-card .grid-card-image img {
+    height: auto;
+    width: 100%;
+
+    transform: scale(1) !important;
+  }
+
   .footer-text {
     text-align: center;
   }
+
 }
